<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:clickable="true"
    android:focusable="true"

    tools:context=".log_in2">
    <RelativeLayout
        android:layout_width="377dp"
        android:layout_height="450dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"

        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logIn2"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/blue"
            android:layout_centerHorizontal="true"

            />

        <EditText
            android:id="@+id/userLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="135dp"
            android:drawableLeft="@drawable/ic_baseline_group_24"
            android:hint="@string/userName"
            android:inputType="text"

            android:textSize="20sp"
            android:drawableStart="@drawable/ic_baseline_group_24" />

        <EditText
            android:id="@+id/passLog"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="220dp"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_baseline_lock_24" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log in"
            android:id="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="330dp"/>

        <TextView
            android:id="@+id/deleteUser"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="51dp"
            android:layout_marginRight="51dp"
            android:layout_marginBottom="23dp"
            android:gravity="center_horizontal"
            android:text="DELETE OLD USER ACCOUNT"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="19sp"
            android:textStyle="italic" />
    </RelativeLayout>
</RelativeLayout>